# CryptoInshort

./: .dockerignore  Dockerfile  README.md  initial_script.sh  pyproject.toml
apps/: urls.py
apps/account/: admin.py  signals.py
apps/account/migrations/: 0001_initial.py
apps/account/models/: users.py
apps/news/: admin.py  apps.py  signals.py  urls.py
apps/news/crons/: fetch_new_news.py
apps/news/filters/: crypto_news.py  crypto_tricker.py
apps/news/management/commands/: call_history_news.py
apps/news/migrations/: 0001_initial.py
apps/news/models/: __init__.py  crypto_news.py  crypto_tricker.py
apps/news/serializers/: crypto_news.py  crypto_ticker.py
apps/news/services/: extract_news_from_url.py
apps/news/views/: crypto_news.py  crypto_tricker.py
apps/shared/: file_utils.py
config/: settings.py  urls.py
